--- a/index.html
+++ b/index.html
@@ -5,23 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>25Watts</title>
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
     <h1>25Watts</h1>
+    <div>
+        <a href="#first-p">Ir al primer parrafo</a>
+    </div>
     <img src="./assets/images/contact-image.png"/>
     <img src="./assets/images/Icon feather-arrow-left-circle.svg"/>
     <form >
-        <label for="username">Nombre de Usuario:</label>
+        <label class="input-text" for="username">Nombre de Usuario:</label>
         <input type="text" placeholder="Ej: vicodiliscia" name="username" id="name"/>
         <label for="email">Email:</label>
         <input type="email" placeholder="Ej: vico@mail.com" name="email" id="email"/>
         <label for="password">Contraseña:</label>
         <input type= "password" placeholder="Ej: Pass1234*" name="password" id="password"/>
-        <label for="comentario">Comentarios:</label>
+        <label class="input-text" for="comentario">Comentarios:</label>
         <textarea placeholder="Ej: Comentario largo" maxlength="30" name="textarea" id="comentario">
             Autorrellenado
         </textarea>
         <button type="submit">Enviar</button>
     </form>
+    <p class="input-text" id="first-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore illo modi totam adipisci ab culpa amet harum unde eaque sed animi, tenetur in officia aut vero, ea molestiae laborum repellendus.</p>
+    <p class="input-text otraClass">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sint recusandae impedit quas atque nobis eum. Voluptatum adipisci quae facilis blanditiis fugit at veniam voluptatem, exercitationem, ipsam architecto natus fuga.</p>
+    <div id="container">
+        <span>Hijo directo</span>
+        <p>Primer parrafo <span>parte destacada</span>de nuestro texto</p>
+        <p>Segundo parrafo con otro texto</p>
+    </div>
+    <h1>Titulo</h1>
+    <p class="first">Lorem ipsum dolor sit amet consectetur adipisicing elit. At alias fuga iure nesciunt necessitatibus? Numquam reiciendis odio, quasi distinctio eius accusamus, repellendus veniam error porro ipsum tempore ducimus sint alias.</p>
+    <p class="second">Lorem ipsum dolor sit amet consectetur adipisicing elit. At alias fuga iure nesciunt necessitatibus? Numquam reiciendis odio, quasi distinctio eius accusamus, repellendus veniam error porro ipsum tempore ducimus sint alias.</p>
+    <p class="third">Lorem ipsum dolor sit amet consectetur adipisicing elit. At alias fuga iure nesciunt necessitatibus? Numquam reiciendis odio, quasi distinctio eius accusamus, repellendus veniam error porro ipsum tempore ducimus sint alias.</p>
+    <p class="fourth">Lorem ipsum dolor sit amet consectetur adipisicing elit. At alias fuga iure nesciunt necessitatibus? Numquam reiciendis odio, quasi distinctio eius accusamus, repellendus veniam error porro ipsum tempore ducimus sint alias.</p>
+    <p class="fifth">Lorem ipsum dolor sit amet consectetur adipisicing elit. At alias fuga iure nesciunt necessitatibus? Numquam reiciendis odio, quasi distinctio eius accusamus, repellendus veniam error porro ipsum tempore ducimus sint alias.</p>
+    <p class="sixth">Lorem ipsum dolor sit amet consectetur adipisicing elit. At alias fuga iure nesciunt necessitatibus? Numquam reiciendis odio, quasi distinctio eius accusamus, repellendus veniam error porro ipsum tempore ducimus sint alias.</p>
+
 </body>
 </html>
